--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div>
                         <h1
                             style="
-                                color: #e89873;
+                                color: #fff;
                                 text-align: center;
                                 max-width: 450px;
                                 margin: 0 auto;
